extract config from code to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-
 server.port=8080
+github.client.id=4bf692be17be943ffd63
+github.client.secret=724206e829358e873e9806293e324171fe92d9cf
+github.redirect.uri=http://localhost:8080/callback
